--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "bootstrap": "^4.6.0",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-fontawesome-css": "^1.1.0",
     "gatsby-plugin-sass": "^4.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "reactstrap": "^8.9.0",
     "sass": "^1.32.8"
-  }
+  },
+  "devDependencies": {}
 }
